--- a/express-tutorial/package.json
+++ b/express-tutorial/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.1"
   }
 }
